# Local_Lifestyle_Planning

./: .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  pyproject.toml  serve_frontend.py
agent/: __init__.py  main.py  schemas.py
agent/core/: constraint_parser.py  fault_handlers.py  llm_planner.py  partial_replan.py  react_loop.py  speed_guard.py  time_allocator.py
agent/modules/: __init__.py  collab_confirm.py  family_profile.py  preference_extractor.py  profile_store.py  signal_extractor.py
agent/routers/: auth.py  collab.py  collect.py  deals.py  execute.py  plan.py  profile.py  share.py  swap.py
agent/tools/: __init__.py  cached_layer.py  check_availability.py  deal_matcher.py  execute_booking.py  generate_itinerary.py  generate_share_text.py  parse_constraints.py  restaurant_search.py  route_plan.py  venue_search.py
agent/tools/mock_data/: __init__.py
docs/: api-patterns.md  features.md  ui-blueprint-map.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CollabPage.tsx  CollectPage.tsx  DonePage.tsx  ExecutePage.tsx  ItineraryPage.tsx  LoginPage.tsx  MapItineraryView.tsx  MapMarker.tsx  POIDetailCard.tsx  PlanningPage.tsx  SwipeReplacementCard.tsx
scripts/: cold-start-test.sh  init.sh  session-handoff.sh  update-feature-status.sh
tests/: __init__.py  test_pass_at_1.py
tests/e2e/: __init__.py  test_execute_booking.py  test_placeholder.py
tests/integration/: __init__.py  test_collab_confirm.py  test_node_swap.py  test_placeholder.py  test_react_loop.py
tests/unit/: __init__.py  test_deal_matcher.py  test_family_profile.py  test_fault_handlers.py  test_llm_planner.py  test_placeholder.py  test_share_text_generator.py  test_signal_extractor.py  test_time_allocator.py  test_ui_collect_step1_2.py  test_ui_collect_step3.py
